# Done-1004-211025

./: AR_ARMA.cpp  AR_ARMA_2 explanations.txt  AR_ARMA_2 Расшифровка вывода.txt  AR_ARMA_2.cpp  Bitcoin blockchain info - full list.txt  Bitcoin info.txt  Bitcoin_transfer_fee and mempool.txt  CEXvsDEX.txt  How_to_see_cryptowallets.txt  README.md  Sales_item.h  ar_hl_test.csv  ar_hl_test_1s_2025_01.csv  current_state_and_history_wallets_cpp.txt  file1.txt  file2.txt  file3.txt  functions.cpp  functions.h  main.cpp  my btcblockchain parcing.txt  my.cpp  myAdventure.cpp  myAdventure2.cpp  myConstruct.cpp  myConstructDestruct.cpp  myCubicFeet.cpp  myCurrency.cpp  myDecrement.cpp  myDestructVirtual.cpp  myEvenOdd.cpp  myFractionsSum.cpp  myLetter.cpp  myPoundsInverse.cpp  mySimpleSort.cpp  mySimpleSortString.cpp  mySortList.cpp  mySortList2.cpp  myTwoColomns.cpp  myTwoColomns2.cpp  (+96 more)
Andr/: Bot_Andr_context_2608.txt  context_old.txt  get_price.cpp  get_price_2  get_price_2.cpp
CompDecompTests/: input_cm.txt  my_comp_decom_file_constmemory  my_comp_decom_file_constmemory.cpp  my_comp_decom_file_constmemory_new  my_comp_decom_file_constmemory_new.cpp  my_compres_decompres_files  my_compression.cpp  output  output.zst  output_cm_big.zst
Crypto_triangle/: my_crypto_triangle.cpp  my_crypto_triangle_2.cpp  my_crypto_triangle_3.cpp  my_crypto_triangle_4.cpp
MyZstdProject/: CMakeLists.txt  my_zstd.cpp
Parqeut_analysis_2/: all_files.txt  anomalies_depth_all.ndjson  anomalies_top_spot.ndjson  anomalies_trade_spots.ndjson  failed_files.txt  missing_in_ndjson.txt  parquet_audit_report_depth_nonstandard.txt  parquet_depth_audit.cpp  parquet_trade_spot_audit.cpp  processed_files.txt
Parquet_analysis/: BTCUSDT_6_test.csv  XTZBTC_4.csv  XTZBTC_6.csv  XTZBTC_6_test.csv  XTZBTC_6_time.csv  XTZUSDT_6_test.csv  binance_top_6.parquet  convertor_parquetocsv.cpp  convertor_parquetocsv_2.cpp  convertor_parquetocsv_3.cpp  convertor_parquetocsv_4.cpp  convertor_parquetocsv_5.cpp  convertor_parquetocsv_6.cpp  convertor_parquetocsv_lowlevel.cpp  convertor_parquetocsv_lowlevel_batch.cpp  convertor_parquetocsv_lowlevel_batch_2.cpp  convertor_parquetocsv_lowlevel_batch_3.cpp  convertor_parquetocsv_lowlevel_batch_4.cpp  convertor_parquetocsv_lowlevel_batch_5.cpp  file_list_for_merge.csv  my__merge_lists.cpp  my__triangle_anomalies.cpp  my__triangle_anomalies_2.cpp  my_bubble_sort.cpp  my_column_extracted.cpp  my_column_extracted_2.cpp  my_library_sort.cpp  my_merge_bystrings_3files.cpp  my_merge_bystrings_3files_2.cpp  my_merge_bystrings_3files_3.cpp  my_merge_lists.cpp  my_merge_lists_3files.cpp  my_multipass_external_kway_merge.cpp  my_multipass_external_kway_merge_map.cpp  my_multipass_external_kway_merge_priority_queue.cpp  my_order_book.cpp  my_quick_sort.cpp  my_simple_sort_2.cpp  my_tri.cpp  my_tri_2.cpp  (+9 more)
binance_collector/: Binance API - uploader - S3 - CloudFront - downloader - ноутбук.txt  Binance API - uploader - S3 - CloudFront - downloader - ноутбук_болееподробно.txt  CMakeLists.txt  config.json  manifest_example.json  Тестирование всей цепочки Binance API - uploader - S3 - CloudFront - downloader - ноутбук.txt  Что такое jq и manifest.txt
binance_collector/src/: downloader.cpp  uploader_real_binance.cpp
binance_collector_simple/: CMakeLists.txt  config.json
binance_collector_simple/src/: downloader.cpp  uploader.cpp
budget_planner/: CMakeLists.txt
budget_planner/include/: budget_planner.hpp
budget_planner/src/: CMakeLists.txt  budget_planner.cpp  main.cpp
budget_planner/tests/: CMakeLists.txt  test_budget_planner.cpp
count_elements_greater_than_previous_average/: main.cpp  run_tests.cpp
fibonacci_down_top/: CMakeLists.txt
fibonacci_down_top/include/: fibonacci_down_top.h
fibonacci_down_top/src/: fibonacci_bottom_up.cpp  main.cpp
fibonacci_down_top/tests/: test_fibonacci_bottom_up.cpp
fibonacci_top_down/: CMakeLists.txt
fibonacci_top_down/include/: fibonacci.h
fibonacci_top_down/src/: CMakeLists.txt  fibonacci.cpp  main.cpp
fibonacci_top_down/tests/: CMakeLists.txt  test_fibonacci.cpp
knapsack/: CMakeLists.txt
knapsack/include/: knapsack.hpp
knapsack/src/: CMakeLists.txt  my_knapsack.cpp
knapsack/tests/: CMakeLists.txt  test_knapsack.cpp
telegram_bot/: CMakeLists.txt  main.cpp
